version/0.19/_sources/api/solver/_autosummary/settings/direction_1_vector.rst.txt
:orphan:

.. _direction_1_vector:

direction_1_vector
==================

.. autoclass:: ansys.fluent.core.solver.settings_241.direction_1_vector.direction_1_vector
    :show-inheritance:

.. rubric:: Methods

========================================   =======================================

Method                                                                     Summary

========================================   =======================================
:ref:`list_properties <list_properties>`       List properties of selected object.

========================================   =======================================

.. rubric:: Named object type

:ref:`reference_frame_velocity_child <reference_frame_velocity_child>`


.. rubric:: Included in:

================================   =======================

Parent                                             Summary

================================   =======================
:ref:`porous_zone <porous_zone>`       Help not available.

================================   =======================

