version/0.27/_sources/api/solver/_autosummary/settings/direction_1_vector.rst.txt
:orphan:

.. _direction_1_vector:

direction_1_vector
==================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.direction_1_vector
    :show-inheritance:

.. rubric:: Methods

==========================================   ==========================================

Method                                                                          Summary

==========================================   ==========================================
:ref:`list_properties <list_properties_1>`          List properties of selected object.

:ref:`resize <resize>`                           Set number of objects for list-object.

==========================================   ==========================================

.. rubric:: Named object type

:ref:`direction_1_vector_child <direction_1_vector_child>`


.. rubric:: Included in:

================================   =============================================================

Parent                                                                                   Summary

================================   =============================================================
:ref:`porous_zone <porous_zone>`       Allows to change porous-zone model variables or settings.

================================   =============================================================

